<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <android.support.v7.widget.GridLayout
            android:id="@+id/grid"
            app:columnCount="2"
            app:rowCount="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
                android:contentDescription="@string/tlimage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/TLimage"/>
        <ImageView
                android:contentDescription="@string/trimage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/TRimage"/>
        <ImageView
                android:contentDescription="@string/blimage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/BLimage"/>
        <ImageView
                android:contentDescription="@string/brimage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/BRimage"/>
    </android.support.v7.widget.GridLayout>
</android.support.constraint.ConstraintLayout>