<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:text="@string/gameInfo"
                android:textColor="@android:color/holo_blue_light"
                android:textAlignment="center"
                android:textStyle="italic"
                android:textSize="42sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/gameInfo"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:srcCompat="@tools:sample/backgrounds/scenic[2]"
                    android:id="@+id/imageView"
                    android:layout_weight="1"/>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8">
                <TextView
                        android:text="@string/gameName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/name"/>
                <TextView
                        android:text="@string/gameType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/type"/>
                <TextView
                        android:text="@string/gameNbPlayer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/nbPlayer"/>
                <TextView
                        android:text="@string/gameYear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/Year"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/gameDescription"/>
        <Button
                android:text="@string/knowMore"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>